<resources>
    <string name="app_name">common</string>

    <string name="text_error_server">未能连接到服务器</string>
    <string name="text_error_timeout">连接超时，请稍后重试</string>

    <string name="text_loading">加载中...</string>
    <string name="text_loading_overtime">加载页面超时</string>

    <string name="text_close">关闭</string>

    <string name="login_open_account">立即开户</string>
    
    <!-- Dialog Common -->
    <string name="dialog_common_title">操作提示</string>
    <string name="dialog_common_confirm">确定</string>
    <string name="dialog_common_cancle">取消</string>

    <string name="common_cancle">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_timeerror">起止时间有误，请重新选择</string>
    <string name="common_time_week">时间跨度超过7天，请重新选择</string>
    <string name="common_time_month">时间跨度超过30天，请重新选择</string>
    <string name="common_time_threemonth">时间跨度超过90天，请重新选择</string>

    <!-- Puer Trade Dialog -->
    <string name="dialog_puer_message">藏品</string>
    <string name="dialog_puer_name">藏品名称: </string>
    <string name="dialog_puer_code">藏品代码: </string>
    <string name="dialog_puer_deal_records">成交记录</string>
    <string name="dialog_puer_deal_order_number">订单号: </string>
    <string name="dialog_puer_deal_price">成交价: </string>
    <string name="dialog_puer_deal_amount">成交量: </string>
    <string name="dialog_puer_deal_total_price">成交额: </string>
    <string name="dialog_puer_deal_time">成交时间: </string>
    <string name="dialog_puer_deal_trade_number">成交编号: </string>
    <string name="dialog_puer_deal_counterfee">手续费：</string>
    <string name="dialog_puer_deal_attribute">交易属性：</string>
    <string name="dialog_puer_entrust_records">委托记录</string>
    <string name="dialog_puer_entrust_price">委托价: </string>
    <string name="dialog_puer_entrust_amount">委托量: </string>
    <string name="dialog_puer_entrust_time">委托时间: </string>
    <string name="dialog_puer_entrust_number">委托编号: </string>
    <string name="dialog_puer_entrust_average">成交均价: </string>
    <string name="dialog_puer_entrust_deal_amount">成交数量：</string>
    <string name="dialog_puer_entrust_attribute">交易属性：</string>
    <string name="dialog_puer_entrust_status">交易状态：</string>

    <string name="dialog_puer_trade_buy">您确定要提交挂牌委托吗？</string>
    <string name="dialog_puer_trade_sell">您确定要提交挂牌委托吗？</string>
    <string name="dialog_puer_trade_code">藏品代码:</string>
    <string name="dialog_puer_trade_name">藏品名称:</string>
    <string name="dialog_puer_trade_serial_no">流水号</string>
    <string name="dialog_puer_trade_price">挂牌价格:</string>
    <string name="dialog_puer_trade_amount">挂牌数量:</string>
    <string name="dialog_puer_trade_total_price">挂牌金额:</string>
    <string name="dialog_puer_trade_type">挂牌方向:</string>

    <string name="dialog_pick_name">名称:</string>
    <string name="dialog_pick_price">价格:</string>
    <string name="dialog_pick_amount">数量:</string>
    <string name="dialog_pick_total_price">总价:</string>
    <string name="dialog_pick_tips">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;因挂牌点选为用户手动选择，会出现多用户选择一单的情况，可能会导致成交失败或部分成交的情况。</string>

    <string name="dialog_inout_trade_message">您确定要交易吗？</string>
    <string name="dialog_inout_trade_type">出入金类型:</string>
    <string name="dialog_inout_trade_bankname">银行名称:</string>
    <string name="dialog_inout_trade_card">银行卡号:</string>
    <string name="dialog_inout_trade_money">交易金额:</string>

    <!-- redwine Trade Dialog -->
    <string name="dialog_redwine_trade_firm">会员信息</string>

    <string name="market_range_normal">- - -</string>


    <!-- 登录页面-->
    <string name="text_copyright">大泰技术 版权所有</string>
    <string name="copyright">Copyright © 2017 Datai All Rights Reserved.</string>
    <string name="login_commodities">请输入大宗交易账号</string>
    <string name="login_puer">请输入普洱交易账号</string>
    <string name="login_password">请输入您的登录密码</string>
    <string name="login_spot">请输入稀土交易账号</string>
    <string name="login_redwine">请输入红酒交易账号</string>
    <string name="login">登录</string>
    <string name="login_reset">忘记密码请联系客服重置</string>
    <string name="login_password_length">您输入的密码不足6位</string>
    <string name="login_remember_account">保持登录状态</string>
    <string name="login_has_read">已阅读</string>
    <string name="login_book">&#060;&#060;风险告知书&#062;&#062;</string>
    <string name="login_book_title">风险告知书</string>
    <string name="login_online_service">在线客服</string>
    <string name="login_contains_space">输入内容包含空格，请重新输入</string>
    <string name="login_text_forget_pw">忘记密码？</string>

</resources>
