<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/common_dialog_padding_big"
    android:paddingRight="@dimen/common_dialog_padding_big">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_area_margin_big"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_puer_trade_code" />

        <TextView
            android:id="@+id/tv_dialog_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height_big"
        android:background="@drawable/bg_dialog_dotted_line"
        android:layerType="software" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_puer_trade_name" />

        <TextView
            android:id="@+id/tv_dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height_big"
        android:background="@drawable/bg_dialog_dotted_line"
        android:layerType="software" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_puer_trade_price" />

        <TextView
            android:id="@+id/tv_dialog_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height_big"
        android:background="@drawable/bg_dialog_dotted_line"
        android:layerType="software" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_puer_trade_amount" />

        <TextView
            android:id="@+id/tv_dialog_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height_big"
        android:background="@drawable/bg_dialog_dotted_line"
        android:layerType="software" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_puer_trade_type" />

        <TextView
            android:id="@+id/tv_dialog_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_line_height_big"
        android:background="@drawable/bg_dialog_dotted_line"
        android:layerType="software" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_redwine_trade_firm" />

        <TextView
            android:id="@+id/tv_dialog_firmid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right" />

    </LinearLayout>

</LinearLayout>
